Fixed primary constraints

--- a/Demo_and_Test.ipynb
+++ b/Demo_and_Test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "adapted-campaign",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "realistic-subcommittee",
    "metadata": {},
    "outputs": [],
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "japanese-escape",
    "metadata": {},
    "outputs": [],
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "furnished-wound",
    "metadata": {},
    "outputs": [],
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "natural-denial",
    "metadata": {},
    "outputs": [],
@@ -335,8 +335,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "human-spain",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nucleotide size upper bounds: [30, 35, 40, 50, 60, 80, 100]\n",
+      "Accuracies for each bucket: [26, 30, 44, 49, 43, 49, 23]\n",
+      "Median iteration values: [0.0, 0.0, 0.0, 0, 0, 1, 11]\n",
+      "Nucleotide size upper bounds: [30, 35, 40, 50, 60, 80, 100]\n",
+      "Accuracies for each bucket: [25, 34, 50, 50, 43, 52, 20]\n",
+      "Median iteration values: [0, 0.0, 0.0, 0.0, 0, 1.0, 1.5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(2):\n",
+    "    correct_list = []\n",
+    "    total_list = []\n",
+    "    average_iterations = []\n",
+    "    dict_key = [30, 35, 40, 50, 60, 80, 100]\n",
+    "    for key in dict_key:\n",
+    "        correct = 0\n",
+    "        current = 0\n",
+    "        iterations = []\n",
+    "        total_list.append(len(structure_buckets[key]))\n",
+    "        for target_structure in structure_buckets[key]:\n",
+    "            _, random_sequence = initialize_sequences(target_structure, 100)\n",
+    "            nupack_structure, _ = nupack_analyze_sequence(random_sequence)\n",
+    "            result = mutate_sequence_iterate(random_sequence, target_structure, nupack_structure, 100)\n",
+    "            current += 1\n",
+    "            print('Current bucket', key, '/ Current structure:', current, 'of', len(structure_buckets[key]), end='\\r')\n",
+    "            if result['success']:\n",
+    "                correct += 1\n",
+    "                iterations.append(result['iteration'])\n",
+    "        correct_list.append(correct)\n",
+    "        average_iterations.append(statistics.median(iterations))\n",
+    "    accuracies = [i/j for i, j in zip(correct_list, total_list)]\n",
+    "    print('Nucleotide size upper bounds:', dict_key)\n",
+    "    print('Accuracies for each bucket:', correct_list)\n",
+    "    print('Median iteration values:', average_iterations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "integral-portable",
    "metadata": {},
    "outputs": [],
    "source": []
