--- a/Generate_Aptamer_Library.ipynb
+++ b/Generate_Aptamer_Library.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "appreciated-jamaica",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "married-tonight",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "round-avenue",
    "metadata": {},
    "outputs": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "assured-german",
    "metadata": {},
    "outputs": [
@@ -76,8 +76,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initial sequences: ['GACGGCGCAAAAUACGUCG', 'GGGUGCGGGCAACAACCCA', 'CCCCUUCACAUCAUGGGGG', 'CAGGGAUAACUCCACCUGG', 'GGUCGUACUGGUUGGACCU', 'GGGCGAGGUGAGCGGCCCU', 'GGCGGCUUUAACGACGCCG', 'UCGCGACAAAUCAGGCGAA', 'GGCUGCCACGACCAAGCCA', 'CCGGACCGAACAACCCGGU', 'GGCGGUACGAAAUACGCCG', 'AGCCGAGUCACGUAGGCUG', 'GGCCGCUACACAUAGGCCA', 'GGCCACAGAUGACCGGCCC', 'GCUCAUCACCGCUCGAGCA', 'GGCGAGAAUGGAUACGCCG', 'GGGCCGACAUUAUAGCCCA', 'GAGGUCUCUCUUAUCCUCA', 'GGGGUUGAUUGGGUCCCCG', 'GGGCUUCGAUGACUGCCCG']\n",
-      "Final sequences: ['GACGGCGCAAAAUACGUCG', 'GGGUGCGGGCAACAACCCA', 'CCCCUUCACAUCAUGGGGG', 'CAGGGAUAACUCCACCUGG', 'GGUCGUACUGGUUGGACCU', 'GGGCGAGGUGAGCGGCCCU', 'GGCGGCUUUAACGACGCCG', 'UCGCGACAAAUCAGGCGAA', 'GGCUGCCACGACCAAGCCA', 'CCGGACCGAACAACCCGGU', 'GGCGGUACGAAAUACGCCG', 'AGCCGAGUCACGUAGGCUG', 'GGCCGCUACACAUAGGCCA', 'GGCCACAGAUGACCGGCCC', 'GCUCAUCACCGCUCGAGCA', 'GGCGAGAAUGGAUACGCCG', 'GGGCCGACAUUAUAGCCCA', 'GAGGUCUCUCUUAUCCUCA', 'GGGGUUGAUUGGGUCCCCG', 'GGGCUUCGAUGACUGCCCG']\n",
+      "Initial sequences: ['GCCUCGCGUAGAAUGGGCG', 'GAGUAAAUCACGCCGCUCG', 'GGAUGGUGCCCAGGGUCCG', 'GGGUAAUUUAUAACGCCCU', 'CCGUUAGGUCGGAUGCGGC', 'CGCUGAAUCAUACAGGCGC', 'CGGUUUCCGUCAUUGCCGC', 'CCCUUCAAGAAAAUGGGGA', 'GCCUGGAUUAAAUAGGGCU', 'GCCUACACGGUUCAGGGCU', 'GGGUGGUGAGGGAAGCCCU', 'GGGUUACACUUUGCGCCCA', 'GUCUGAAGGAGAAGGGACU', 'CUCUAAACCACUCAGGAGG', 'GGCUAACGGUACUCGGCCG', 'GCCUUGCAACCUUCGGGCA', 'GCCUAACGUGGAAGGGGCU', 'CGCUAGCUAUGUCAGGCGA', 'GCCUAGAAAUAAUAGGGCA', 'GAGUUGUGCAUUGUGCUCA']\n",
+      "Final sequences: ['GCCUCGCGUAGAAUGGGCG', 'GAGUAAAUCACGCCGCUCG', 'GGAUGGUGCCCAGGGUCCG', 'GGGUAAUUUAUAACGCCCU', 'CCGUUAGGUCGGAUGCGGC', 'CGCUGAAUCAUACAGGCGC', 'CGGUUUCCGUCAUUGCCGC', 'CCCUUCAAGAAAAUGGGGA', 'GCCUGGAUUAAAUAGGGCU', 'GCCUACACGGUUCAGGGCU', 'GGGUGGUGAGGGAAGCCCU', 'GGGUUACACUUUGCGCCCA', 'GUCUGAAGGAGAAGGGACU', 'CUCUAAACCACUCAGGAGG', 'GGCUAACGGUACUCGGCCG', 'GCCUUGCAACCUUCGGGCA', 'GCCUAACGUGGAAGGGGCU', 'CGCUAGCUAUGUCAGGCGA', 'GCCUAGAAAUAAUAGGGCA', 'GAGUUGUGCAUUGUGCUCA']\n",
       "Successful: [True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True, True]\n"
      ]
     }
@@ -87,11 +87,15 @@
     "initial_sequences = []\n",
     "final_sequences = []\n",
     "successes = []\n",
+    "constraints = {}\n",
+    "constraints[3] = 'U'\n",
+    "constraints[14] = 'G'\n",
+    "\n",
     "for i in range(library_size):\n",
-    "    _, initial_sequence = initialize_sequences(ep23_structure, 50)\n",
+    "    _, initial_sequence = initialize_sequences(ep23_structure, 50, constraints)\n",
     "    initial_sequences.append(initial_sequence)\n",
     "    nupack_structure, _ = nupack_analyze_sequence(initial_sequence)\n",
-    "    result = mutate_sequence_iterate(initial_sequence, ep23_structure, nupack_structure, 100)\n",
+    "    result = mutate_sequence_iterate(initial_sequence, ep23_structure, nupack_structure, 100, constraints)\n",
     "    successes.append(result['success'])\n",
     "    final_sequence = result['final_sequence']\n",
     "    final_sequences.append(final_sequence)\n",
@@ -102,34 +106,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 37,
    "id": "acoustic-messaging",
    "metadata": {},
    "outputs": [],
    "source": [
     "mfe_list = []\n",
     "similarity_scores = []\n",
+    "reverse_sequences = []\n",
     "for sequence in final_sequences:\n",
     "    nupack_structure, mfe = nupack_analyze_sequence(sequence)\n",
     "    mfe_list.append(mfe)\n",
     "    mismatch = structure_differences(ep23_structure, nupack_structure)\n",
     "    similarity_score = (len(sequence) - len(mismatch)) / len(sequence)\n",
-    "    similarity_scores.append(similarity_score)"
+    "    similarity_scores.append(similarity_score)\n",
+    "    reversedsequence=''.join(reversed(sequence))\n",
+    "    reverse_sequences.append(reversedsequence)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 38,
    "id": "computational-cooling",
    "metadata": {},
    "outputs": [],
    "source": [
-    "aptamer_library = pd.DataFrame(list(zip(final_sequences, mfe_list, similarity_scores)), columns=['sequences', 'mfe', 'similarity_scores'])"
+    "aptamer_library = pd.DataFrame(list(zip(final_sequences, mfe_list, similarity_scores, reverse_sequences)), columns=['sequences', 'mfe', 'similarity_scores', '3to5_sequence'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 39,
    "id": "sweet-royalty",
    "metadata": {},
    "outputs": [
@@ -157,158 +164,179 @@
        "      <th>sequences</th>\n",
        "      <th>mfe</th>\n",
        "      <th>similarity_scores</th>\n",
+       "      <th>3to5_sequence</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>GACGGCGCAAAAUACGUCG</td>\n",
-       "      <td>-4.737886</td>\n",
+       "      <td>GCCUCGCGUAGAAUGGGCG</td>\n",
+       "      <td>-4.087886</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>GCGGGUAAGAUGCGCUCCG</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>GGGUGCGGGCAACAACCCA</td>\n",
-       "      <td>-5.587886</td>\n",
+       "      <td>GAGUAAAUCACGCCGCUCG</td>\n",
+       "      <td>-2.587885</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>GCUCGCCGCACUAAAUGAG</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>CCCCUUCACAUCAUGGGGG</td>\n",
-       "      <td>-6.870575</td>\n",
+       "      <td>GGAUGGUGCCCAGGGUCCG</td>\n",
+       "      <td>-3.487886</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>GCCUGGGACCCGUGGUAGG</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>CAGGGAUAACUCCACCUGG</td>\n",
-       "      <td>-4.870575</td>\n",
+       "      <td>GGGUAAUUUAUAACGCCCU</td>\n",
+       "      <td>-4.232212</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>UCCCGCAAUAUUUAAUGGG</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>GGUCGUACUGGUUGGACCU</td>\n",
-       "      <td>-5.082211</td>\n",
+       "      <td>CCGUUAGGUCGGAUGCGGC</td>\n",
+       "      <td>-3.309097</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>CGGCGUAGGCUGGAUUGCC</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>GGGCGAGGUGAGCGGCCCU</td>\n",
-       "      <td>-7.182211</td>\n",
+       "      <td>CGCUGAAUCAUACAGGCGC</td>\n",
+       "      <td>-3.009097</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>CGCGGACAUACUAAGUCGC</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>GGCGGCUUUAACGACGCCG</td>\n",
-       "      <td>-6.837885</td>\n",
+       "      <td>CGGUUUCCGUCAUUGCCGC</td>\n",
+       "      <td>-3.309097</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>CGCCGUUACUGCCUUUGGC</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>UCGCGACAAAUCAGGCGAA</td>\n",
-       "      <td>-4.598799</td>\n",
+       "      <td>CCCUUCAAGAAAAUGGGGA</td>\n",
+       "      <td>-4.345622</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>AGGGGUAAAAGAACUUCCC</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>GGCUGCCACGACCAAGCCA</td>\n",
-       "      <td>-5.587886</td>\n",
+       "      <td>GCCUGGAUUAAAUAGGGCU</td>\n",
+       "      <td>-4.532210</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>UCGGGAUAAAUUAGGUCCG</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>CCGGACCGAACAACCCGGU</td>\n",
-       "      <td>-4.797502</td>\n",
+       "      <td>GCCUACACGGUUCAGGGCU</td>\n",
+       "      <td>-4.132211</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>UCGGGACUUGGCACAUCCG</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>GGCGGUACGAAAUACGCCG</td>\n",
-       "      <td>-6.837885</td>\n",
+       "      <td>GGGUGGUGAGGGAAGCCCU</td>\n",
+       "      <td>-4.832211</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>UCCCGAAGGGAGUGGUGGG</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>AGCCGAGUCACGUAGGCUG</td>\n",
-       "      <td>-5.021658</td>\n",
+       "      <td>GGGUUACACUUUGCGCCCA</td>\n",
+       "      <td>-4.487886</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>ACCCGCGUUUCACAUUGGG</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>GGCCGCUACACAUAGGCCA</td>\n",
-       "      <td>-7.537886</td>\n",
+       "      <td>GUCUGAAGGAGAAGGGACU</td>\n",
+       "      <td>-2.632212</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>UCAGGGAAGAGGAAGUCUG</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>GGCCACAGAUGACCGGCCC</td>\n",
-       "      <td>-5.948799</td>\n",
+       "      <td>CUCUAAACCACUCAGGAGG</td>\n",
+       "      <td>-2.020575</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>GGAGGACUCACCAAAUCUC</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>GCUCAUCACCGCUCGAGCA</td>\n",
-       "      <td>-4.637886</td>\n",
+       "      <td>GGCUAACGGUACUCGGCCG</td>\n",
+       "      <td>-4.387886</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>GCCGGCUCAUGGCAAUCGG</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
-       "      <td>GGCGAGAAUGGAUACGCCG</td>\n",
-       "      <td>-5.437885</td>\n",
+       "      <td>GCCUUGCAACCUUCGGGCA</td>\n",
+       "      <td>-4.187886</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>ACGGGCUUCCAACGUUCCG</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
-       "      <td>GGGCCGACAUUAUAGCCCA</td>\n",
-       "      <td>-6.237886</td>\n",
+       "      <td>GCCUAACGUGGAAGGGGCU</td>\n",
+       "      <td>-4.232211</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>UCGGGGAAGGUGCAAUCCG</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
-       "      <td>GAGGUCUCUCUUAUCCUCA</td>\n",
-       "      <td>-4.637886</td>\n",
+       "      <td>CGCUAGCUAUGUCAGGCGA</td>\n",
+       "      <td>-3.145623</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>AGCGGACUGUAUCGAUCGC</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
-       "      <td>GGGGUUGAUUGGGUCCCCG</td>\n",
-       "      <td>-6.737886</td>\n",
+       "      <td>GCCUAGAAAUAAUAGGGCA</td>\n",
+       "      <td>-4.587886</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>ACGGGAUAAUAAAGAUCCG</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
-       "      <td>GGGCUUCGAUGACUGCCCG</td>\n",
-       "      <td>-7.337886</td>\n",
+       "      <td>GAGUUGUGCAUUGUGCUCA</td>\n",
+       "      <td>-3.187885</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>ACUCGUGUUACGUGUUGAG</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              sequences       mfe  similarity_scores\n",
-       "0   GACGGCGCAAAAUACGUCG -4.737886                1.0\n",
-       "1   GGGUGCGGGCAACAACCCA -5.587886                1.0\n",
-       "2   CCCCUUCACAUCAUGGGGG -6.870575                1.0\n",
-       "3   CAGGGAUAACUCCACCUGG -4.870575                1.0\n",
-       "4   GGUCGUACUGGUUGGACCU -5.082211                1.0\n",
-       "5   GGGCGAGGUGAGCGGCCCU -7.182211                1.0\n",
-       "6   GGCGGCUUUAACGACGCCG -6.837885                1.0\n",
-       "7   UCGCGACAAAUCAGGCGAA -4.598799                1.0\n",
-       "8   GGCUGCCACGACCAAGCCA -5.587886                1.0\n",
-       "9   CCGGACCGAACAACCCGGU -4.797502                1.0\n",
-       "10  GGCGGUACGAAAUACGCCG -6.837885                1.0\n",
-       "11  AGCCGAGUCACGUAGGCUG -5.021658                1.0\n",
-       "12  GGCCGCUACACAUAGGCCA -7.537886                1.0\n",
-       "13  GGCCACAGAUGACCGGCCC -5.948799                1.0\n",
-       "14  GCUCAUCACCGCUCGAGCA -4.637886                1.0\n",
-       "15  GGCGAGAAUGGAUACGCCG -5.437885                1.0\n",
-       "16  GGGCCGACAUUAUAGCCCA -6.237886                1.0\n",
-       "17  GAGGUCUCUCUUAUCCUCA -4.637886                1.0\n",
-       "18  GGGGUUGAUUGGGUCCCCG -6.737886                1.0\n",
-       "19  GGGCUUCGAUGACUGCCCG -7.337886                1.0"
+       "              sequences       mfe  similarity_scores        3to5_sequence\n",
+       "0   GCCUCGCGUAGAAUGGGCG -4.087886                1.0  GCGGGUAAGAUGCGCUCCG\n",
+       "1   GAGUAAAUCACGCCGCUCG -2.587885                1.0  GCUCGCCGCACUAAAUGAG\n",
+       "2   GGAUGGUGCCCAGGGUCCG -3.487886                1.0  GCCUGGGACCCGUGGUAGG\n",
+       "3   GGGUAAUUUAUAACGCCCU -4.232212                1.0  UCCCGCAAUAUUUAAUGGG\n",
+       "4   CCGUUAGGUCGGAUGCGGC -3.309097                1.0  CGGCGUAGGCUGGAUUGCC\n",
+       "5   CGCUGAAUCAUACAGGCGC -3.009097                1.0  CGCGGACAUACUAAGUCGC\n",
+       "6   CGGUUUCCGUCAUUGCCGC -3.309097                1.0  CGCCGUUACUGCCUUUGGC\n",
+       "7   CCCUUCAAGAAAAUGGGGA -4.345622                1.0  AGGGGUAAAAGAACUUCCC\n",
+       "8   GCCUGGAUUAAAUAGGGCU -4.532210                1.0  UCGGGAUAAAUUAGGUCCG\n",
+       "9   GCCUACACGGUUCAGGGCU -4.132211                1.0  UCGGGACUUGGCACAUCCG\n",
+       "10  GGGUGGUGAGGGAAGCCCU -4.832211                1.0  UCCCGAAGGGAGUGGUGGG\n",
+       "11  GGGUUACACUUUGCGCCCA -4.487886                1.0  ACCCGCGUUUCACAUUGGG\n",
+       "12  GUCUGAAGGAGAAGGGACU -2.632212                1.0  UCAGGGAAGAGGAAGUCUG\n",
+       "13  CUCUAAACCACUCAGGAGG -2.020575                1.0  GGAGGACUCACCAAAUCUC\n",
+       "14  GGCUAACGGUACUCGGCCG -4.387886                1.0  GCCGGCUCAUGGCAAUCGG\n",
+       "15  GCCUUGCAACCUUCGGGCA -4.187886                1.0  ACGGGCUUCCAACGUUCCG\n",
+       "16  GCCUAACGUGGAAGGGGCU -4.232211                1.0  UCGGGGAAGGUGCAAUCCG\n",
+       "17  CGCUAGCUAUGUCAGGCGA -3.145623                1.0  AGCGGACUGUAUCGAUCGC\n",
+       "18  GCCUAGAAAUAAUAGGGCA -4.587886                1.0  ACGGGAUAAUAAAGAUCCG\n",
+       "19  GAGUUGUGCAUUGUGCUCA -3.187885                1.0  ACUCGUGUUACGUGUUGAG"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
